--- a/report.html
+++ b/report.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         <h2 class="text-center mt-5 text-primary-emphasis">
-            inser Logos and Repoprt Title Here (Header)
+            insert Logos and Repoprt Title Here (Header)
         </h2>
     </div>
     <div>
@@ -36,9 +36,9 @@
                 <tr>
                   <th class="text-center">Municipality</th>
                   <th class="text-center">Barangay</th>
-                  <th class="text-center">Total No. of Valid <br>Report Sightings</th>
-                  <th class="text-center">Average Cots <br>Size</th>
-                  <th class="text-center">Total No. of Cots <br>Captured</th>
+                  <th class="text-center">Total No. of Valid Report Sightings</th>
+                  <th class="text-center">Average Cots Size</th>
+                  <th class="text-center">Total No. of Cots Captured</th>
                 </tr>
               </thead>
               <tbody>
