--- a/report.html
+++ b/report.html
@@ -133,7 +133,7 @@
             const status_chartOptions = {
                 series: [
                     {
-                        name: 'Total Number of Faculty',
+                        name: 'Sample Data',
                         data: [1,2,3,4,5]
                     }
                 ],
